@@ -1,3 +1,7 @@
+2011-02-18 Javier Lanz <javier.lanz@artica.es>
+	* godmode/gis_maps/configure_gis_map.php: Group combo now only displays
+	user's groups.
+
 2011-02-18 Sancho Lerena <slerena@artica.es>
 
 	Merged bugfix from trunk.
